[package]
name = "face-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
image = {version="^0.25", features=["jpeg", "png"]}
ndarray = "0.16"
rust-faces = { version = "1.0.0", features = ["viz"] }
ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "cuda"] }
nokhwa = { version = "0.10.7", features = ["input-native", "output-wgpu"] }
piston_window = "0.132.0"
piston2d-opengl_graphics = "0.86.0"

[patch.crates-io]
rust-faces = { path = "crates/rust-faces" }
